--- a/src/app/todos/components/header/header.component.html
+++ b/src/app/todos/components/header/header.component.html
@@ -1,10 +1,8 @@
-<header class="header" data-reactid=".0.0">
-  <h1 data-reactid=".0.0.0">todos</h1>
+<header class="header">
+  <h1>todos</h1>
   <input
     class="new-todo"
     placeholder="What needs to be done?"
-    value=""
-    data-reactid=".0.0.1"
     autoFocus
     [value]="text"
     (keyup)="changText($event)"
