--- a/src/app/todos/components/todos/todos.component.html
+++ b/src/app/todos/components/todos/todos.component.html
@@ -1,4 +1,5 @@
 <div class="todoapp">
-  <app-header></app-header>
-  <app-main></app-main>
+  <app-todos-header></app-todos-header>
+  <app-todos-main></app-todos-main>
+  <app-todos-footer></app-todos-footer>
 </div>
